Repaired Student's Portal button not redirecting to the main page

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -18,17 +18,17 @@
 
         <!--Header-->
         <div class="navbar-header">
-            <!--this button apears when device doesn't have space to display our items-->
+            <!--this button appears when device doesn't have space to display our items-->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <!--when clicked, it redirects to the homepage-->
-            <a class="navbar-brand" href="{# url 'index' #}">Student's Portal</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Student's Portal</a>
         </div>
 
-        <!--Navigation items go here. For example: Recipies, User Profiles, etc.-->
+        <!--Navigation items go here. For example: Recipes, User Profiles, etc.-->
         <div class="collapse navbar-collapse" id="topNavBar">
             <ul class="nav navbar-nav">
                 <li class="">
