--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -39,7 +39,7 @@
                 </li>
                 <li class="">
                     <!--Todo-->
-                     <a href="#">
+                     <a href="{% url 'bookRecipes' %}">
                          <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>&nbsp;Recipes
                      </a>
                 </li>
@@ -64,6 +64,14 @@
                     <!--Todo-->
                      <a href="#">
                          <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;Logout
+                     </a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right" >
+                <li class="">
+                    <!--Todo-->
+                     <a href="{% url 'new_recipe' %}">
+                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Add Recipe
                      </a>
                 </li>
             </ul>
