--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -4,7 +4,7 @@
 {% block title %}Main page{% endblock %}
 
 {% block body %}
-   <h1>Index Page</h1>
+   <h1>Index Dawid Page</h1>
     <!--It doesn't work this way :/-->
     <!--<ul>-->
         <!--{% for user in all_users %}-->
