--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -39,7 +39,7 @@
                 </li>
                 <li class="">
                     <!--Todo-->
-                     <a href="{% url 'users:bookRecipes' %}">
+                     <a href="#">
                          <span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>&nbsp;Recipes
                      </a>
                 </li>
@@ -62,17 +62,15 @@
             <ul class="nav navbar-nav navbar-right" >
                 <li class="">
                     <!--Todo-->
-                     <a href="#">
-                         <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;Logout
-                     </a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right" >
-                <li class="">
-                    <!--Todo-->
-                     <a href="{% url 'users:new_recipe' %}">
-                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Add Recipe
-                     </a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'users:logout' %}">
+                            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;Log Out
+                        </a>
+                    {% else %}
+                        <a href="{% url 'users:login' %}">
+                            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;Log In
+                        </a>
+                    {% endif %}
                 </li>
             </ul>
 
