--- a/users/templates/users/login_form.html
+++ b/users/templates/users/login_form.html
@@ -1,5 +1,5 @@
 {% extends 'users/base.html' %}
-{% block title %}Register{% endblock %}
+{% block title %}Log User{% endblock %}
 
 {% block body %}
 <div class="container-fluid">
