--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <title>{% block title %}Student's portal{% endblock %}</title>
     <!--loads the path to static files - only if needed -->
-    <!--{% load staticfiles %}-->
+    {% load staticfiles %}
     <!--bootstrap, fonts from google -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+    <link href="{% static 'users/style.css' %}" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
