--- a/users/templates/users/registration_form.html
+++ b/users/templates/users/registration_form.html
@@ -15,7 +15,7 @@
                         {% include 'users/form_template.html' %}
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Subimt</button>
+                                <button type="submit" class="btn btn-success">Submit</button>
                             </div>
                         </div>
                     </form>
