Change few mistakes in files
modified:   mysite/urls.py
modified:   recipes/templates/recipes/single_recipe.html

--- a/recipes/templates/recipes/single_recipe.html
+++ b/recipes/templates/recipes/single_recipe.html
@@ -17,7 +17,7 @@
         <li>{{ ingredients }}</li>
     {% endfor %}
     </ul>
-    <span>REcipe</span>
-    <p>{{ single_recipe.instructions }}</p>
+    <span>Recipe</span>
+    <p>{{ single_recipe.instruction }}</p>
 
 {% endblock %}
