Loose version of adding/displaying recipes
New class Unit and Quantity, repair few mistakes in source code
change displaying of recipes

--- a/recipes/templates/recipes/single_recipe.html
+++ b/recipes/templates/recipes/single_recipe.html
@@ -1,5 +1,5 @@
 {% extends 'users/base.html' %}
-{% block title %}single_recipe.title{% endblock %}
+{% block title %}{{ single_recipe.title }}{% endblock %}
 
 {% block body %}
 
