--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -80,6 +80,11 @@
                                 <label class="control-label col-sm-2">Ingredient 1</label>
                                 <input type="text" name="i0" id="i0"/>
                                 <input type="text" name="how_many0" id="how_many0"/>
+                                <select name="chosen_unit">
+                                    {% for unit in unit_class %}
+                                        <option value={{ unit }}>{{ unit }}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
                         </div>
                         <div>
