Add select box when there is more than one ingredient
Change js methods in order to display select box for every ingredient

--- a/users/templates/users/login_form.html
+++ b/users/templates/users/login_form.html
@@ -8,7 +8,7 @@
         <div class="col-sm-12 col-md-7">
             <div class="panel panel-success">
                 <div class="panel-body">
-                    <h2>Log in here</h2>
+                    <h2>{{ LogInMsg }}</h2>
                     {% if messages %}
                         <ul class="messages">
                         {% for message in messages %}
