Add select box when there is more than one ingredient
Change js methods in order to display select box for every ingredient

--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -114,7 +114,7 @@
                                 <label class="control-label col-sm-2">Ingredient 1</label>
                                 <input type="text" name="i0" id="i0"/>
                                 <input type="text" name="how_many0" id="how_many0"/>
-                                <select name="chosen_unit">
+                                <select name="chosen_unit0" id="chosen_unit0">
                                     {% for unit in unit_class %}
                                         <option value={{ unit }}>{{ unit }}</option>
                                     {% endfor %}
